# GLMsBench

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
docs/superpowers/plans/: 2026-06-26-glm-5.2-provider-benchmark.md
docs/superpowers/specs/: 2026-06-26-glm-5.2-provider-benchmark-design.md
glmsbench/: __init__.py  checkpoint.py  config.py  metrics.py  models.py  runner.py
glmsbench/datasets/: arc.py  base.py  gsm8k.py  humaneval.py  mmlu.py
glmsbench/providers/: client.py  ratelimit.py  retry.py
glmsbench/reporting/: aggregates.py  cost_model.py  json_out.py  markdown.py
glmsbench/sandbox/: runner.py
glmsbench/scoring/: code.py  exact.py  numeric.py  parity.py
harness/: config.example.yaml
results/: mini-arc-output.json
results/arc-n100-clean-max1200-20260702T164929Z/: backfill_summary.json  report.md
results/arc-n100-clean-max1200-20260702T164929Z/analysis/: per_item.csv  (+2 more)
results/arc-n30-merged-zai-umans-c2-20260702T112934Z/: report.md
results/arc-n30-umans-c2-20260702T112934Z/: run_umans_only.py
results/mini-arc/: ck.jsonl
scripts/: analyze_quality.py  compile_chart_report.py  normalize_results.py  plot_results.py  smoke_test.py
tests/: test_checkpoint.py  test_config.py  test_metrics.py  test_runner.py
tests/datasets/: test_arc.py  test_gsm8k.py  test_humaneval.py  test_mmlu.py  test_parsing.py
tests/providers/: test_client.py  test_ratelimit.py  test_retry.py
tests/reporting/: test_cost_model.py  test_json_out.py  test_markdown.py
tests/sandbox/: test_runner.py
tests/scoring/: test_code.py  test_parity.py
(+17 files in other folders)
